# taqy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
taqy/: __init__.py  usequity.py
tests/: conftest.py
tests/consistency/: test_nbbo_single_multi.py  test_trade_fine_coarse.py  test_trade_first_last.py
tests/gold_files/: nbbo_big_60_July.parquet  nbbo_big_6_Feb.parquet  nbbo_single_6_Feb.parquet  nbbo_small_60_July.parquet  nbbo_small_6_Feb.parquet  taq_trade_bar_statistics_sql_60_F_F.sql  taq_trade_bar_statistics_sql_60_F_F_F.sql  taq_trade_bar_statistics_sql_60_F_F_T.sql  taq_trade_bar_statistics_sql_60_F_T.sql  taq_trade_bar_statistics_sql_60_F_T_F.sql  taq_trade_bar_statistics_sql_60_F_T_T.sql  taq_trade_bar_statistics_sql_60_T_F.sql  taq_trade_bar_statistics_sql_60_T_F_F.sql  taq_trade_bar_statistics_sql_60_T_F_T.sql  taq_trade_bar_statistics_sql_60_T_T.sql  taq_trade_bar_statistics_sql_60_T_T_F.sql  taq_trade_bar_statistics_sql_60_T_T_T.sql  taq_trade_bar_statistics_sql_6_F_F.sql  taq_trade_bar_statistics_sql_6_F_F_F.sql  taq_trade_bar_statistics_sql_6_F_F_T.sql  taq_trade_bar_statistics_sql_6_F_T.sql  taq_trade_bar_statistics_sql_6_F_T_F.sql  taq_trade_bar_statistics_sql_6_F_T_T.sql  taq_trade_bar_statistics_sql_6_T_F.sql  taq_trade_bar_statistics_sql_6_T_F_F.sql  taq_trade_bar_statistics_sql_6_T_F_T.sql  taq_trade_bar_statistics_sql_6_T_T.sql  taq_trade_bar_statistics_sql_6_T_T_F.sql  taq_trade_bar_statistics_sql_6_T_T_T.sql
tests/regression/: test_nbbo.py  test_sql.py  test_trade.py
